# spinning-3d-cube

./: .gitignore  CMakeLists.txt  Cube.hpp  Quaternion.cpp  Quaternion.hpp  README.md  Vector.cpp  build.sh  main.cpp  main.typ  run.sh
include/: Cube.hpp  Quaternion.hpp  Screen.hpp  Vector.hpp
notes/: notes.md  refs.bib
src/: CMakeLists.txt  Cube.cpp  Quaternion.cpp  Screen.cpp  Vector.cpp
